@@ -78,7 +78,7 @@
 {"hash":370709,"name":"tdigit_main.acttake.caption","sourcebytes":[84,97,107,101],"value":"Take"},
 {"hash":142780485,"name":"tdigit_main.acttakere.caption","sourcebytes":[82,101,45,84,97,107,101],"value":"Re-Take"},
 {"hash":205527077,"name":"tdigit_main.acttimertake.caption","sourcebytes":[84,105,109,101,114,32,84,97,107,101],"value":"Timer Take"},
-{"hash":69665915,"name":"tdigit_main.acttakebuildduplex.caption","sourcebytes":[84,97,107,101,32,70,114,111,110,116,47,66,97,99,107],"value":"Take Front/Back"},
+{"hash":118735611,"name":"tdigit_main.acttakebuildduplex.caption","sourcebytes":[66,117,105,108,100,32,70,114,111,110,116,47,66,97,99,107],"value":"Build Front/Back"},
 {"hash":44030676,"name":"tdigit_main.actcropnext.caption","sourcebytes":[67,114,111,112,32,43,32,78,101,120,116],"value":"Crop + Next"},
 {"hash":347380,"name":"tdigit_main.actgonext.caption","sourcebytes":[78,101,120,116],"value":"Next"},
 {"hash":296859,"name":"tdigit_main.actgoback.caption","sourcebytes":[66,97,99,107],"value":"Back"},
